change to .gitignore file
changing the gitignore file to hopefully remove some of the folders that
aren't necessary to keep within the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@ ehthumbs.db
 
 # Folder config file
 Desktop.ini
-
+.git/*
+.settings/*
+.bin/*
+*.classpath
+*.project
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
